--- a/index.html
+++ b/index.html
@@ -1,26 +1,4 @@
 <!DOCTYPE html>
 <head>
-  <title>Pusher Test</title>
-  <script src="https://js.pusher.com/7.2/pusher.min.js"></script>
-  <script>
-
-    // Enable pusher logging - don't include this in production
-    Pusher.logToConsole = true;
-
-    var pusher = new Pusher('bedb3775b71a9520c67c', {
-      cluster: 'us2'
-    });
-
-    var channel = pusher.subscribe('my-channel');
-    channel.bind('my-event', function(data) {
-      alert(JSON.stringify(data));
-    });
-  </script>
+  <script src="https://js.pusher.com/7.0/pusher-with-encryption.min.js"></script>
 </head>
-<body>
-  <h1>Pusher Test</h1>
-  <p>
-    Try publishing an event to channel <code>my-channel</code>
-    with event name <code>my-event</code>.
-  </p>
-</body>
